# fairfun-protocol

./: .config.example.toml  .gitignore  Anchor.toml  Cargo.toml  README.md  SPEC.md  b58-to-json.ts  claimer.ts  creator-fees.ts  idl.json  indexer.ts  local-config.example.json  local-config.json  mainnet-authority.json  mainnet-config.example.json  mainnet-config.json  package-lock.json  package.json  rescue.ts  server.ts  stardust-metadata.json  test-users.example.json  test-users.json  tsconfig.json
app/: globals.css  layout.tsx  page.client.tsx  page.tsx
app/api/claim/: route.ts
app/api/claim/delegated/: route.ts
app/api/claim/delegated/finalize/: route.ts
app/api/claim/delegation/: route.ts
app/api/claims/: route.ts
app/api/leaderboard/: route.ts
app/api/treasury/: route.ts
app/api/wallet/: route.ts
backend/: .config.toml  create-metadata.ts  create-token-metadata.ts  package.json  server.ts  test-users.example.json  test-users.json
frontend/: .config.toml  Admin.client.tsx  App.client.tsx  App.css  GalaxyWheel.tsx  LiveViewer.client.tsx  WheelDemo.tsx  WheelDemoClient.tsx  package-lock.json  package.json  server.ts  wheel-demo.html
lib/: auto-claims.ts  claim-indexing.ts  claim-stats.ts  claim-token-deltas.ts  config.ts  creator-fees.ts  database.ts  fairfun-program.ts  gravity.ts  indexer.ts  solana.ts  tokenized-claims.ts  treasury.ts
lib/pump/: anchor.ts  bonding-curve.ts  constants.ts  pda.ts
programs/anchor-fairfun/: Cargo.toml
programs/anchor-fairfun/src/: lib.rs
programs/anchor-fairfun/tests/: test_initialize.rs
programs/fairfun-rewards/: Cargo.toml
programs/fairfun-rewards/src/: errors.rs  introspection.rs  lib.rs  state.rs
programs/fairfun-rewards/tests/: test_claims.rs
programs/redemption/: Cargo.toml
programs/redemption/src/: lib.rs
programs/star-nft/: Cargo.toml
programs/star-nft/src/: lib.rs
programs/stardust/: Cargo.toml
programs/stardust/src/: errors.rs  introspection.rs  lib.rs  state.rs
programs/wheel/: Cargo.toml
programs/wheel/src/: lib.rs
scripts/: check-indexer-state.ts  check-treasury.ts  create-pool.ts  fund-wheel.ts  init-mainnet.ts  init-wheel.ts  prune-zero-claim-events.ts  setup-demo.ts  setup-local.ts  update-wheel-config.ts  update-wheel-mint.ts
tests/: star-nft.ts  stardust.ts
types/: bs58.d.ts
