[package]
name = "fairfun-rewards"
version = "0.1.0"
description = "Multi-pool SOL rewards program for backend-authorized gravity accrual"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fairfun_rewards"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
solana-instructions-sysvar = "3.0.0"
solana-sdk-ids = "3.1.0"
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "11.0.0", features = ["no-entrypoint"] }

[dev-dependencies]
litesvm = "0.10.0"
solana-ed25519-program = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-signer = "3.0.0"
solana-transaction = "3.0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
