[package]
name = "stardust-redemption"
version = "0.1.0"
description = "Stardust Redemption - Burn stardust for random SOL rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "stardust_redemption"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
