[package]
name = "star-nft"
version = "0.1.0"
description = "STAR NFT Minting and Redemption Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "star_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
