[package]
name = "galaxy-wheel"
version = "0.1.0"
description = "Galaxy Wheel - Burn stardust for random SOL rewards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "galaxy_wheel"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "1.0.0", features = ["init-if-needed"] }
anchor-spl = "1.0.0"
solana-program = "3.0.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
